--- a/packages/bmstestbedc2f2_notebooks/run_manual.ipynb
+++ b/packages/bmstestbedc2f2_notebooks/run_manual.ipynb
@@ -179,48 +179,48 @@
     "    ('ART-01-07', 'temperature:radiant'): 23.6,\n",
     "    ('ART-01-07', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-07', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-07', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-07', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-07', 'occupancy'): 1.,\n",
     "\n",
     "    ('ART-01-08', 'temperature:drybulb'): 22.7,\n",
     "    ('ART-01-08', 'temperature:radiant'): 22.7,\n",
     "    ('ART-01-08', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-08', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-08', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-08', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-08', 'occupancy'): 1.,\n",
     "    \n",
     "    ('ART-01-09', 'temperature:drybulb'): 23.4,\n",
     "    ('ART-01-09', 'temperature:radiant'): 23.4,\n",
     "    ('ART-01-09', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-09', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-09', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-09', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-09', 'occupancy'): 1.,\n",
     "    \n",
     "    ('ART-01-10', 'temperature:drybulb'): 22.3,\n",
     "    ('ART-01-10', 'temperature:radiant'): 22.3,\n",
     "    ('ART-01-10', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-10', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-10', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-10', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-10', 'occupancy'): 1.,\n",
     "    \n",
     "    ('ART-01-11a', 'temperature:drybulb'): 23.0,\n",
     "    ('ART-01-11a', 'temperature:radiant'): 23.0,\n",
     "    ('ART-01-11a', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-11a', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-11a', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-11a', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-11a', 'occupancy'): 1.,\n",
     "    \n",
     "    ('ART-01-12', 'temperature:drybulb'): 20.7,\n",
     "    ('ART-01-12', 'temperature:radiant'): 20.7,\n",
     "    ('ART-01-12', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-12', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-12', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-12', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-12', 'occupancy'): 1.,\n",
     "    \n",
     "    ('ART-01-13', 'temperature:drybulb'): 21.1,\n",
     "    ('ART-01-13', 'temperature:radiant'): 21.1,\n",
     "    ('ART-01-13', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-13', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-13', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-13', 'co2'): AHU_CO2,\n",
     "    ('ART-01-13', 'occupancy'): 1.,\n",
     "    \n",
@@ -228,7 +228,7 @@
     "    ('ART-01-14', 'temperature:radiant'): 23.3,\n",
     "    ('ART-01-14', 'humidity'): AHU_Hum,\n",
     "    ('ART-01-14', 'co2'): AHU_CO2,\n",
-    "    ('ART-01-14', 'load:hvac'): AHU_TP,\n",
+    "    ('ART-01-14', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-14', 'occupancy'): 1.,\n",
     "})\n",
     "\n",
