--- a/packages/bmstestbedc2f2_notebooks/run_manual.ipynb
+++ b/packages/bmstestbedc2f2_notebooks/run_manual.ipynb
@@ -2,25 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/AD/user/lab/bmstestbedc2f2/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-02-19 13:59:14,816\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2025-02-19 13:59:17,749\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import threading\n",
     "from ray.rllib.algorithms.ppo import PPO, PPOConfig\n",
     "\n",
-    "from bmstestbedc2f2.systems import ProtoBMSystem, ManualBMSystem\n",
+    "from bmstestbedc2f2.systems import _TODO_ProtoBMSystem, _TODO_ManualBMSystem\n",
     "from bmstestbedc2f2.utils import resolve_path\n",
-    "from bmstestbedc2f2.envs import MultiAgentBuildingEnv\n",
+    "from bmstestbedc2f2.envs import _TODO_MultiAgentBuildingEnv\n",
     "\n",
     "\n",
     "class Controller(threading.Thread):\n",
-    "    def __init__(self, system: ProtoBMSystem):\n",
+    "    def __init__(self, system: _TODO_ProtoBMSystem):\n",
     "        super().__init__()\n",
     "        self._system = system\n",
     "        self._algo = PPO(\n",
-    "            MultiAgentBuildingEnv.get_algo_config(\n",
+    "            _TODO_MultiAgentBuildingEnv.get_algo_config(\n",
     "                PPOConfig()\n",
     "                #.resources(num_gpus=1/2)\n",
     "                .env_runners(\n",
@@ -51,90 +62,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/rllib/algorithms/algorithm.py:555: RayDeprecationWarning: This API is deprecated and may be removed in future Ray releases. You could suppress this warning by setting env variable PYTHONWARNINGS=\"ignore::DeprecationWarning\"\n",
-      "`UnifiedLogger` will be removed in Ray 2.7.\n",
-      "  return UnifiedLogger(config, logdir, loggers=None)\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/tune/logger/unified.py:53: RayDeprecationWarning: This API is deprecated and may be removed in future Ray releases. You could suppress this warning by setting env variable PYTHONWARNINGS=\"ignore::DeprecationWarning\"\n",
-      "The `JsonLogger interface is deprecated in favor of the `ray.tune.json.JsonLoggerCallback` interface and will be removed in Ray 2.7.\n",
-      "  self._loggers.append(cls(self.config, self.logdir, self.trial))\n",
-      "2025-01-08 05:35:39,486\tWARNING unified.py:56 -- Could not instantiate JsonLogger: cannot pickle '_thread.lock' object.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/tune/logger/unified.py:53: RayDeprecationWarning: This API is deprecated and may be removed in future Ray releases. You could suppress this warning by setting env variable PYTHONWARNINGS=\"ignore::DeprecationWarning\"\n",
-      "The `CSVLogger interface is deprecated in favor of the `ray.tune.csv.CSVLoggerCallback` interface and will be removed in Ray 2.7.\n",
-      "  self._loggers.append(cls(self.config, self.logdir, self.trial))\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/tune/logger/unified.py:53: RayDeprecationWarning: This API is deprecated and may be removed in future Ray releases. You could suppress this warning by setting env variable PYTHONWARNINGS=\"ignore::DeprecationWarning\"\n",
-      "The `TBXLogger interface is deprecated in favor of the `ray.tune.tensorboardx.TBXLoggerCallback` interface and will be removed in Ray 2.7.\n",
-      "  self._loggers.append(cls(self.config, self.logdir, self.trial))\n",
-      "2025-01-08 05:35:40,609\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bmstestbedc2f2.systems.ManualBMSystem at 0x7f13eae19dd0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-08 05:35:40,619\tWARNING deprecation.py:50 -- DeprecationWarning: `_enable_new_api_stack` has been deprecated. Use `AlgorithmConfig._enable_new_api_stack` instead. This will raise an error in the future!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-08 05:35:40,650\tWARNING worker.py:1451 -- SIGTERM handler is not set because current thread is not the main thread.\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1362: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/gcs_server.out' mode='a' encoding='utf-8'>\n",
-      "  self.start_gcs_server()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1362: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/gcs_server.err' mode='a' encoding='utf-8'>\n",
-      "  self.start_gcs_server()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1367: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/monitor.out' mode='a' encoding='utf-8'>\n",
-      "  self.start_monitor()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1367: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/monitor.err' mode='a' encoding='utf-8'>\n",
-      "  self.start_monitor()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1378: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/dashboard.err' mode='a' encoding='utf-8'>\n",
-      "  self.start_api_server(\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1420: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/raylet.out' mode='a' encoding='utf-8'>\n",
-      "  self.start_raylet(plasma_directory, object_store_memory)\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1420: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/raylet.err' mode='a' encoding='utf-8'>\n",
-      "  self.start_raylet(plasma_directory, object_store_memory)\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/home/AD/user/lab/reports/2024TESTBED/.venv/lib/python3.11/site-packages/ray/_private/node.py:1422: ResourceWarning: unclosed file <_io.TextIOWrapper name='/tmp/ray/session_2025-01-08_05-35-40_676530_2190314/logs/log_monitor.err' mode='a' encoding='utf-8'>\n",
-      "  self.start_log_monitor()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "2025-01-08 05:35:41,263\tINFO worker.py:1786 -- Started a local Ray instance.\n",
-      "2025-01-08 05:35:42,061\tINFO trainable.py:583 -- Restored on 192.168.200.249 from checkpoint: Checkpoint(filesystem=local, path=/home/AD/user/lab/reports/2024TESTBED/packages/bmstestbedc2f2/algo_checkpoint)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bms = ManualBMSystem()\n",
+    "# TODO\n",
+    "bms = _TODO_ManualBMSystem()\n",
     "controller = Controller(bms)\n",
     "\n",
     "controller.start()\n",
-    "bms.start()"
+    "bms.start()\n",
+    "\n",
+    "for zone_id in bms.zone_ids:\n",
+    "    bms[(zone_id, 'temperature:thermostat')].value = 25."
    ]
   },
   {
@@ -146,101 +84,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ART-01-07': np.float32(23.92517),\n",
-       " 'ART-01-08': np.float32(25.678621),\n",
-       " 'ART-01-09': np.float32(27.649374),\n",
-       " 'ART-01-10': np.float32(22.096546),\n",
-       " 'ART-01-11a': np.float32(21.394005),\n",
-       " 'ART-01-12': np.float32(30.0),\n",
-       " 'ART-01-13': np.float32(22.66913),\n",
-       " 'ART-01-14': np.float32(27.799866)}"
+       "{'ART-01-07': 25,\n",
+       " 'ART-01-08': 25,\n",
+       " 'ART-01-09': 25,\n",
+       " 'ART-01-10': 25,\n",
+       " 'ART-01-11a': 25,\n",
+       " 'ART-01-12': 25,\n",
+       " 'ART-01-13': 25,\n",
+       " 'ART-01-14': 25}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import datetime\n",
-    "AHU_TP=0.4622\n",
-    "AHU_CO2=418\n",
-    "AHU_Hum=61\n",
+    "AHU_TP=1.\n",
+    "USER_PREF=24\n",
+    "TEMP_SETPOINT=25\n",
+    "\n",
     "bms.step({\n",
     "    'time': datetime.datetime.now(),\n",
     "\n",
-    "    ('ART-01-07', 'temperature:drybulb'): 23.6,\n",
-    "    ('ART-01-07', 'temperature:radiant'): 23.6,\n",
-    "    ('ART-01-07', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-07', 'co2'): AHU_CO2,\n",
+    "    'load:ahu': AHU_TP,\n",
+    "\n",
+    "    ('ART-01-07', 'temperature'): 23.6,\n",
+    "    ('ART-01-07', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-07', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-07', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-07', 'occupancy'): 1.,\n",
     "\n",
-    "    ('ART-01-08', 'temperature:drybulb'): 22.7,\n",
-    "    ('ART-01-08', 'temperature:radiant'): 22.7,\n",
-    "    ('ART-01-08', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-08', 'co2'): AHU_CO2,\n",
+    "    ('ART-01-08', 'temperature'): 23.6,\n",
+    "    ('ART-01-08', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-08', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-08', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-08', 'occupancy'): 1.,\n",
     "    \n",
-    "    ('ART-01-09', 'temperature:drybulb'): 23.4,\n",
-    "    ('ART-01-09', 'temperature:radiant'): 23.4,\n",
-    "    ('ART-01-09', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-09', 'co2'): AHU_CO2,\n",
+    "    ('ART-01-09', 'temperature'): 23.6,\n",
+    "    ('ART-01-09', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-09', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-09', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-09', 'occupancy'): 1.,\n",
     "    \n",
-    "    ('ART-01-10', 'temperature:drybulb'): 22.3,\n",
-    "    ('ART-01-10', 'temperature:radiant'): 22.3,\n",
-    "    ('ART-01-10', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-10', 'co2'): AHU_CO2,\n",
+    "    ('ART-01-10', 'temperature'): 23.6,\n",
+    "    ('ART-01-10', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-10', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-10', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-10', 'occupancy'): 1.,\n",
     "    \n",
-    "    ('ART-01-11a', 'temperature:drybulb'): 23.0,\n",
-    "    ('ART-01-11a', 'temperature:radiant'): 23.0,\n",
-    "    ('ART-01-11a', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-11a', 'co2'): AHU_CO2,\n",
+    "    ('ART-01-11a', 'temperature'): 23.6,\n",
+    "    ('ART-01-11a', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-11a', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-11a', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-11a', 'occupancy'): 1.,\n",
     "    \n",
-    "    ('ART-01-12', 'temperature:drybulb'): 20.7,\n",
-    "    ('ART-01-12', 'temperature:radiant'): 20.7,\n",
-    "    ('ART-01-12', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-12', 'co2'): AHU_CO2,\n",
+    "    ('ART-01-12', 'temperature'): 23.6,\n",
+    "    ('ART-01-12', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-12', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-12', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-12', 'occupancy'): 1.,\n",
     "    \n",
-    "    ('ART-01-13', 'temperature:drybulb'): 21.1,\n",
-    "    ('ART-01-13', 'temperature:radiant'): 21.1,\n",
-    "    ('ART-01-13', 'humidity'): AHU_Hum,\n",
+    "    ('ART-01-13', 'temperature'): 27.5,\n",
+    "    ('ART-01-13', 'temperature:userpref'): USER_PREF,\n",
+    "    ('ART-01-13', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-13', 'load:ahu'): AHU_TP,\n",
-    "    ('ART-01-13', 'co2'): AHU_CO2,\n",
     "    ('ART-01-13', 'occupancy'): 1.,\n",
     "    \n",
-    "    ('ART-01-14', 'temperature:drybulb'): 23.3,\n",
-    "    ('ART-01-14', 'temperature:radiant'): 23.3,\n",
-    "    ('ART-01-14', 'humidity'): AHU_Hum,\n",
-    "    ('ART-01-14', 'co2'): AHU_CO2,\n",
+    "    ('ART-01-14', 'temperature'): 25,\n",
+    "    ('ART-01-14', 'temperature:userpref'): 25,\n",
+    "    ('ART-01-14', 'temperature:thermostat'): TEMP_SETPOINT,\n",
     "    ('ART-01-14', 'load:ahu'): AHU_TP,\n",
     "    ('ART-01-14', 'occupancy'): 1.,\n",
     "})\n",
     "\n",
     "{\n",
-    "    zone_id: bms[(zone_id, 'setpoint:thermostat')].value \n",
+    "    zone_id: bms[(zone_id, 'temperature:thermostat')].value \n",
     "    for zone_id in bms.zone_ids\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
